# ROSPlan

./: .Dockerfile  .Dockerfile_demos  .gitignore  .gitmodules  .travis.rosinstall  .travis.yml  .travis_prescript.sh  LICENSE  README.md  _config.yml  changelog.md  contact.html  contact.md  demonstration.html  documentation.html  index.html  index.md  news.html  notes.mkd  params.json  publications.md  test.txt  updates.html  vm.md
knowledge_base/: CMakeLists.txt  package.xml
knowledge_base/src/: KnowledgeBase.cpp  KnowledgeBase.h  PlanningFilter.cpp  TestHarness.cpp
planning_knowledge_msgs/: CMakeLists.txt  package.xml
planning_knowledge_msgs/msg/: KnowledgeItem.msg  Notification.msg
planning_knowledge_msgs/srv/: AttributeService.srv  GetAttributesOfInstance.srv  GetInstancesOfType.srv
planning_system/: CMakeLists.txt  package.xml
planning_system/launch/: planning_system.launch
planning_system/src/: ActionDispatch.h  ActionFeedback.cpp  PDDLProblemGenerator.cpp  PlanningEnvironment.h  PlanningEnvironmentBasic.h  PlanningEnvironmentTIM.h  PlanningLoop.cpp  PostProcess.cpp
rosplan/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosplan_action_interface/: CMakeLists.txt  package.xml  setup.py
rosplan_action_interface/config/: demo_config.yaml  example_config.yaml
rosplan_action_interface/src/: ActionInterfaceManager.py  ActionlibActionInterface.py  BaseActionInterface.py  FSMActionInterface.py  RPKnowledgeBaseLink.py  ServiceActionInterface.py
rosplan_config/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosplan_config/launch/: load_system_config.launch
rosplan_config/planner/: domain.pddl
rosplan_demos/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosplan_demos/common/: README  clg  d.pddl  deterministic_domain_turtlebot.pddl  domain_coaches.pddl  domain_lights.pddl  elevators-domain.pddl  elevators-problem.pddl  p.pddl  plan_graph_lights.dot  plan_lights_conditional.pddl  problem_lights.pddl  problem_turtlebot.pddl  problem_turtlebot.ppddl  run-clg.sh  start.sh  stochastic_domain_turtlebot.pddl  stochastic_domain_turtlebot.ppddl  strand_floor.bash  test2.pgm  test2.yaml  testDomain.pddl  testProblem.pddl  test_domain.pddl  test_problem.pddl  test_problem_invalid_syntax.pddl  turtlebot_domain.rddl  turtlebot_domain_goal.rddl  turtlebot_domain_stochastic.rddl  turtlebot_inst.rddl  utest_domain.pddl  utest_problem.pddl  utest_problem_invalid_syntax.pddl  utest_problem_no_solution.pddl  waypoints_floor.txt
rosplan_demos/launch/: condition_turtlebot.launch  csp_simulated_actions.launch  mc2_turtlebot.launch  pnp_conditional.launch  simulated_actions.launch  sparus.launch  strand_planning_system.launch  strand_smiulation.launch  strand_turtlebot.launch  test.launch  turtlebot.launch
rosplan_demos/rviz/: turtlebot.rviz
rosplan_demos/scripts/: action_counter.py  perturbance.py  plan_and_dispatch.bash  replan_loop.py  simulated_actions.bash  sparus_explore.bash  strand_floor.bash  test.bash  test.bash2  test2.bash  turtlebot_explore.bash  waypoints.txt
rosplan_dependencies/: CMakeLists.txt  package.xml
rosplan_dependencies/ippc_server/: ippc_server.cpp  ippc_server.h  strxml.cpp
rosplan_dispatch_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosplan_dispatch_msgs/action/: NonBlockingDispatch.action  Plan.action
rosplan_dispatch_msgs/msg/: ActionDispatch.msg  ActionFeedback.msg  CompletePlan.msg  EsterelPlan.msg  EsterelPlanArray.msg  EsterelPlanEdge.msg  EsterelPlanNode.msg
rosplan_dispatch_msgs/srv/: DispatchService.srv  ExecAlternatives.srv  GetPlanningParams.srv  ParsingService.srv  PlanningService.srv  ProblemService.srv
rosplan_initial_situation/: CMakeLists.txt  package.xml
rosplan_initial_situation/src/: rosplan_initial_situation.cpp
rosplan_interface_behaviorengine/: CMakeLists.txt  package.xml
rosplan_interface_behaviorengine/src/: kb_updater_navgraph.cpp  rosplan_interface_behaviorengine.cpp
rosplan_interface_cola2/: CMakeLists.txt  package.xml
rosplan_interface_cola2/src/: RPCola2.cpp
rosplan_interface_mapping/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosplan_interface_mapping/launch/: rosplan_roadmap_server.launch
rosplan_interface_mapping/src/: RPRoadmapServer.cpp  RPRoadmapVisualization.cpp  RPSimpleMapServer.cpp  RPSimpleMapVisualization.cpp
rosplan_interface_movebase/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosplan_interface_movebase/src/: RPMoveBase.cpp
rosplan_interface_rcllrefbox/: CMakeLists.txt  package.xml
rosplan_interface_rcllrefbox/cmake/: cxx_atleast.cmake
rosplan_interface_rcllrefbox/src/: kb_updater_machine_info.cpp  kb_updater_order_info.cpp  rosplan_interface_rcllrefbox.cpp
rosplan_knowledge_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosplan_knowledge_base/include/: RDDLExprUtils.cpp  RDDLExprUtils.h
rosplan_knowledge_base/launch/: rosplan_knowledge_base.launch
rosplan_knowledge_base/src/: DomainParser.cpp  HDDLKnowledgeBase.cpp  InitialStateParser.cpp  KnowledgeBase.cpp  KnowledgeBaseFactory.cpp  KnowledgeBasePersistent.cpp  KnowledgeComparitor.cpp  MongoInterface.cpp  PDDLDomainParser.cpp  PDDLKnowledgeBase.cpp  PDDLProblemParser.cpp  PPDDLKnowledgeBase.cpp  PPDDLParser.cpp  PPDDLUtils.cpp  PlanFilter.cpp  PlanningFilter.cpp  ProblemParser.cpp  RDDLExprUtils.cpp  RDDLKnowledgeBase.cpp  RDDLOperatorUtils.cpp  RDDLTaskParser.cpp  RDDLUtils.cpp  TestHarness.cpp  VALVisitorOperator.cpp  VALVisitorPredicate.cpp  VALVisitorProblem.cpp  main.cpp
rosplan_knowledge_base/test/: KnowledgeBaseTests.cpp  README.md  knowledge_base_tests.test
rosplan_knowledge_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosplan_knowledge_msgs/msg/: DomainAssignment.msg  DomainFormula.msg  DomainInequality.msg  DomainOperator.msg  ExprBase.msg  ExprComposite.msg  Filter.msg  KnowledgeItem.msg  ProbabilisticEffect.msg  ProblemFormula.msg  StatusUpdate.msg
rosplan_knowledge_msgs/srv/: AddWaypoint.srv  AttributeService.srv  CreatePRM.srv  GenerateProblemService.srv  SetFloat.srv  (+22 more)
rosplan_planning_system/: .gitignore  CHANGELOG.rst  CMakeLists.txt  doxygen_config  main.cpp  package.xml
(+604 files in other folders)
