<?xml version="1.0"?>
<package>
  <name>knowledge_base</name>
  <version>0.0.0</version>
  <description>Sample Knowledge base for ROSPlan. Used to collect and store information used to build the planning model. The knowledge_base is queried by the planning_system to construct the model, and possibly by controllers to retrieve continuous information.</description>
  <maintainer email="michael.cashmore@kcl.ac.uk">michael</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/KCL-Planning/ROSPlan</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>planning_knowledge_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>planning_knowledge_msgs</run_depend>

  <export></export>
</package>
