<?xml version="1.0"?>
<package>
  <name>planning_knowledge_msgs</name>
  <version>0.0.1</version>
  <description>The planning_knowledge_msgs package for the ROSPlan framework.</description>
  <maintainer email="michael.cashmore@kcl.ac.uk">michael</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/planning_dispatch_msgs</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>

  <export></export>
</package>
