<?xml version="1.0"?>
<package>
  <name>planning_system</name>
  <version>0.0.0</version>
  <description>Deliberative layer; A ROS node for a planner.  Deals with automatic problem generation, planning and dispatch discovery of information, and replanning.</description>
  <maintainer email="michael.cashmore@kcl.ac.uk">michael</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/planning_dispatch_msgs</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>planning_dispatch_msgs</build_depend>
  <build_depend>planning_knowledge_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>planning_dispatch_msgs</run_depend>
  <run_depend>planning_knowledge_msgs</run_depend>

  <export></export>
</package>
