<?xml version="1.0"?>
<package>
	<name>rosplan</name>
	<version>0.0.1</version>
	<description>ROSPlan metapackage</description>
	<maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
	<license>BSD</license>
	<url type="website">https://github.com/KCL-Planning/ROSPlan</url>

	<buildtool_depend>catkin</buildtool_depend>

	<run_depend>rosplan_knowledge_msgs</run_depend>
	<run_depend>rosplan_dispatch_msgs</run_depend>
	<run_depend>rosplan_planning_system</run_depend>
	<run_depend>rosplan_knowledge_base</run_depend>
	<run_depend>rosplan_demos</run_depend>

	<export>
		<metapackage/>
	</export>

</package>
