<?xml version="1.0"?>
<package>
  <name>rosplan_config</name>
  <version>0.0.7</version>
  <description>Configuraton of ROSPlan.</description>
  <maintainer email="michael.cashmore@kcl.ac.uk">Michael Cashmore</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/KCL-Planning/ROSPlan</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
 </export>
</package>
