<?xml version="1.0"?>
<package format="2">
  <name>rosplan_dependencies</name>
  <version>0.1.0</version>
  <description>The rosplan_dependencies package</description>
  <maintainer email="gcanal@iri.upc.edu">gerard</maintainer>
  <license>BSD</license>

  <depend>rosplan_knowledge_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>roscpp</exec_depend>

  <build_depend>flex</build_depend>
  <build_depend>bison</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
  
</package>
